// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/Radio Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:ra:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rb:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:r9:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rb:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:ru:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rv:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="htmlId"
                 type="radio"
                 name="radioInputName-:rt:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rv:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rs:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r6:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1 dummyClassname"
             lang="nb"
        >
          <input id="htmlId"
                 class="_radioInput_1ybg2_5"
                 data-testid="123ID"
                 form="formid123"
                 type="radio"
                 name="radioInputName-:r5:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="htmlId"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r4:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:re:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rf:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rd:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rf:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak&nbsp;
            <span class="_radioLabelDescription_1ybg2_100">
              En liten beskrivelse tekst
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rc:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r12:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r13:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:r11:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r13:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak Radio har mistet fokus
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r10:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:ri:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rj:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rh:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rj:"
                 tabindex="-1"
          >
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.&nbsp;
            <span class="_radioLabelDescription_1ybg2_100">
              Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rm:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rn:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rl:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rn:"
                 tabindex="-1"
          >
            Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.&nbsp;
            <span class="_radioLabelDescription_1ybg2_100">
              Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rk:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="dummyIdForwardedFromRef"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rq:"
            class="_srOnly_u2f5e_39"
    >
      radio example
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rr:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="person"
                 name="radioInputName-:rp:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rr:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
